# midifile-performer-js

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  NOTES.md  README.md  package.json  postversion.js  webpack.config.js
js/: browser.index.js  node.index.js
src/: Embindings.cpp  SequencePerformerWrapper.h
test/: basic-cases.js
test/simple/: mfp_test_browser.html  mfp_test_node.js
test/tape/: basic-cases.js
